# docs-atlas

./: .gitignore  AGENTS.md  CLAUDE.md  DESKTOP-RELEASE.md  LICENSE  LLM-PROMPT-TEMPLATE.md  README.md  config.example.yaml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy-pages.yml  release-desktop.yml
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/scripts/: prepare-vditor-assets.mjs
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/web/scripts/: docsConfig.ts  docsData.ts
desktop-updater/: README.md  latest.json
docs/: what-is-docs-atlas.md
docs/getting-started/: 01-prepare-your-docs.md  02-configure-multiple-sources.md  03-ai-docs-workflow.md  04-images-and-preview.md  README.md
open-docs/: phase-2-desktop-prd.md  phase-2-desktop-technical-plan.md  phase-2-remaining-plan.md  release-workflow.md
open-docs/layout-prototypes/: index.html  option-a-directory-first.html  option-b-dual-rail.html  option-c-reader-focus.html  styles.css
scripts/: docsConfig.ts  docsData.ts
scripts/release/: generate-latest-json.mjs  publish-desktop-release.mjs  verify-desktop-version.mjs
src/: main.ts  vite-env.d.ts
src/app/: AppShell.vue
src/assets/: main.css
src/composables/: useActiveHeadings.ts  useDocRoute.ts  useDocsCatalog.ts  useDocsContent.ts  useDocsSearch.ts  useTheme.ts
src/types/: docs.ts
src/views/: DocView.vue  HomeView.vue  SectionView.vue
(+71 files in other folders)
