[package]
name = "docs-atlas-desktop"
version = "0.13.1"
description = "Docs Atlas Desktop"
authors = ["Docs Atlas"]
edition = "2021"
rust-version = "1.74.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
